# autouic_example

./: CMakeLists.txt  CMakePresets.json  README.md
improved/: CMakeLists.txt  CMakePresets.json
src/: CMakeLists.txt  CMakePresets.json  mainwindow.cpp  widget1.cpp  widget1.h  widget2.cpp  widget2.h
